# swot-data-analysis

./: .gitignore  README.md  app.py  config.yaml  pyproject.toml  requirements-gpu.txt
src/swot/: data_loaders.py  download_swaths.py  swot_utils.py  thredds.py
src/swotxai/: __init__.py  animation_utils.py  batch.py  config.py  data_utils.py  pipeline.py  swotxai_utils.py  train_cpu.py  train_gpu_cuml.py  train_gpu_lgbm.py  training.py
src/swotxai/pipeline/: __init__.py  io_utils.py  orchestrator.py  steps_data.py  steps_ml.py  steps_viz.py
